// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAccountModal.vue Should be able to add an account from a valid private key 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 430px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Add Account</div>
          <div class="v-card__text">
            <!---->
            <!---->
            <div>Enter a private key to add the corresponding account.</div>
            <div>
              Private keys are encrypted server side with AES 256 CBC, and stored encrypted. We strongly recommend to not use accounts with any value.
            </div>
            <div class="v-input mt-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: -24px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="privateKey" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Private Key*</label><input required="required" id="privateKey" type="text"></div>
                </div>
              </div>
            </div>
            <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
            <div>Or impersonate an account.</div>
            <div class="v-input theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="accountAddress" class="v-label theme--light" style="left: 0px; position: absolute;">Account Address*</label><input required="required" id="accountAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg v-btn--loading theme--light v-size--default primary" id="submitAccount"><span class="v-btn__content">Add</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`AddAccountModal.vue Should be able to add an account from an address 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 430px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Add Account</div>
          <div class="v-card__text">
            <!---->
            <!---->
            <div>Enter a private key to add the corresponding account.</div>
            <div>
              Private keys are encrypted server side with AES 256 CBC, and stored encrypted. We strongly recommend to not use accounts with any value.
            </div>
            <div class="v-input mt-2 v-input--hide-details theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="privateKey" class="v-label theme--light" style="left: 0px; position: absolute;">Private Key*</label><input required="required" id="privateKey" type="text"></div>
                </div>
              </div>
            </div>
            <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
            <div>Or impersonate an account.</div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: -24px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="accountAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Account Address*</label><input required="required" id="accountAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg v-btn--loading theme--light v-size--default primary" id="submitAccount"><span class="v-btn__content">Add</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`AddAccountModal.vue Should display an error message if the private key has an invalid format 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 430px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Add Account</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark error">
              <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"></i>
                <div class="v-alert__content">Invalid private key.</div>
              </div>
            </div>
            <!---->
            <div>Enter a private key to add the corresponding account.</div>
            <div>
              Private keys are encrypted server side with AES 256 CBC, and stored encrypted. We strongly recommend to not use accounts with any value.
            </div>
            <div class="v-input mt-2 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: -24px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="privateKey" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Private Key*</label><input required="required" id="privateKey" type="text"></div>
                </div>
              </div>
            </div>
            <hr role="separator" aria-orientation="horizontal" class="my-3 v-divider theme--light">
            <div>Or impersonate an account.</div>
            <div class="v-input theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span>​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="accountAddress" class="v-label theme--light" style="left: 0px; position: absolute;">Account Address*</label><input required="required" id="accountAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--contained v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" id="submitAccount"><span class="v-btn__content">Add</span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
